kubernetes/ams-k8s-mongodb.yaml
kind: Service
apiVersion: v1
metadata:
  name: mongo
spec:
  selector:
    app: mongo
  ports:
  - protocol: TCP
    port: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  selector:
    matchLabels:
      app: mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo
    spec:
      volumes:
      - name: mongodb-claim
        persistentVolumeClaim:
                claimName: mongodb-volume-claim
      containers:
      - name: mongodb
        imagePullPolicy: Always
        image: mongo:5.0.6
        ports:
        - containerPort: 27017
        volumeMounts:
        - mountPath: "/data/db/"
          name: mongodb-claim
