kubernetes/ams-k8s-mongodb_repl.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: antmedia
  labels:
    app: mongo
spec:
  clusterIP: None  
  selector:
    app: mongo
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: antmedia
  labels:
    app: mongo
spec:
  serviceName: mongo  
  replicas: 3
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:8
        ports:
        - containerPort: 27017
          name: mongo
        volumeMounts:
        - name: mongo-data
          mountPath: /data/db
        command:
          - "mongod"
          - "--replSet"
          - "rs0"
          - "--bind_ip"
          - "0.0.0.0"
          - "--port"
          - "27017"
          - "--dbpath"
          - "/data/db"
  volumeClaimTemplates:
  - metadata:
      name: mongo-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
