kubernetes/ams-k8s-ingress-edge.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ant-media-server-edge
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.org/websocket-services: "ant-media-server"
    nginx.ingress.kubernetes.io/websocket-services : "ant-media-server"
spec:
  rules:
  - host: test.antmedia.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ant-media-server-edge
            port:
              number: 5080

  tls:
  - secretName: antmedia-cert-edge
    hosts:
      - test.antmedia.cloud
